# blockchess-rs

./: index.html
blockchess/: Cargo.toml  index.html  readme.md
blockchess/3DObjects/Lego/: Readme.md
blockchess/3DObjects/clashRoyale/: Readme.md
blockchess/src/: main.rs  menu.rs
tempweb/: package.json
tempweb/src/routes/: +page.svelte
