[package]
name = "Blockchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.13"
async-channel = "1.6.1"
web3 = { version = "0.18.0", features = [
  "wasm",
  "eip-1193",
], default-features = false }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.60", features = ["Window"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

